Capítulo 2 - Estruturas de Decisão/Exercícios/.metadata/.plugins/org.eclipse.cdt.ui/EX-07.build.log
19:14:03 **** Incremental Build of configuration Debug for project EX-07 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\exercício_7.o" "..\\src\\exercício_7.c" 
..\src\exercício_7.c: In function 'main':
..\src\exercício_7.c:28:15: error: 'parcelas' undeclared (first use in this function)
  scanf("%d", &parcelas);
               ^
..\src\exercício_7.c:28:15: note: each undeclared identifier is reported only once for each function it appears in
..\src\exercício_7.c:17:6: warning: unused variable 'numero' [-Wunused-variable]
  int numero;
      ^

19:14:03 Build Failed. 1 errors, 1 warnings. (took 199ms)

